# hexaframe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml
docs/: roadmap.md  testing.md
src/hexaframe/: endpoint.py  errors.py  ports.py  result.py  testkit.py  types.py  uow.py  use_case.py
src/hexaframe/testkit/: fixtures.py
src/hexaframe_cli/: __init__.py  cli.py  main.py
src/hexaframe_cli/commands/: dx.py  generate.py  new.py
src/hexaframe_cli/templates/generate/: adapter_inmemory.py.j2  port_protocol.py.j2  test_port.py.j2  test_usecase_async.py.j2  test_usecase_sync.py.j2  usecase_async.py.j2  usecase_sync.py.j2
src/hexaframe_cli/templates/project/: .env.j2  Dockerfile.j2  README.md.j2  alembic.ini.j2  app_fastapi.py.j2  docker-compose.yml.j2  gitignore.txt.j2  pyproject_min.toml.j2  test_app.py.j2
src/hexaframe_cli/templates/project/alembic/: env.py.j2
src/hexaframe_cli/templates/project/app/: di.py.j2
src/hexaframe_cli/templates/project/app/db/: base.py.j2  config.py.j2  session.py.j2
src/hexaframe_cli/templates/project/app/usecases/: pong.py.j2
src/hexaframe_cli/utils/: fs.py  templating.py
src/hexaframe_fastapi/: __init__.py  adapter.py  decorators.py
tests/: test_cli_generate.py  test_cli_new.py  test_errors.py  test_fastapi_adapter.py  test_openapi_scaffold.py  test_result.py  test_testkit.py  test_use_case_base.py
