[project]
name = "hexaframe"
version = "0.1.0"
description = "A Python framework for building applications with a hexagonal architecture."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.5.3",
    "typer>=0.9.0",
    "dependency-injector>=4.41.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.14",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.22.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
]
example = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
"Homepage" = "https://github.com/your-username/hexaframe"
"Bug Tracker" = "https://github.com/your-username/hexaframe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/hexaframe"]

[tool.uv.workspace]
members = ["example"]
